# services/core-service/docs/swagger/swagger.json
@@ -68,7 +68,7 @@
                     "application/json"
                 ],
                 "produces": [
-                    "application/json"
+                    "text/plain"
                 ],
                 "tags": [
                     "devices"
@@ -87,9 +87,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Provisioning sketch",
                         "schema": {
-                            "$ref": "#/definitions/github_com_vishalss1_argus_core_internal_domain_device.Device"
+                            "type": "string"
                         }
                     },
                     "400": {
